--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,35 +1,34 @@
 #log-in-form {
-  width: 100%;
-  padding: 0;
-  border-radius: 4px;
-  background-color: #fff;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: left;
+    width: 250px;
+    height: 250px;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
 }
 
-#log-in-form label,
-#log-in-form input {
+#log-in-form > label {
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 #log-in-form input{
     width: 100%;
-    height: 20px;
-    border-radius: 5px;
+    height: 40px;
     border: 1px solid #ccc;
-    padding: 5px;
+    border-radius: 5px;
+    padding: 0 10px;
+    margin-bottom: 10px;
 }
 
 #log-in-form button{
-    width: 20%;
-    height: 30px;
-    margin: 10px;
-    border-radius: 5px;
+    width: 100%;
+    height: 40px;
     border: 1px solid #ccc;
-    padding: 5px;
-    background-color: #f5f5f5;
-    color: #000;
+    border-radius: 5px;
+    padding: 0 10px;
+    margin-bottom: 10px;
 }
