--- a/frontend/src/components/NewUploadFormPage/NewUploadForm.css
+++ b/frontend/src/components/NewUploadFormPage/NewUploadForm.css
@@ -1,7 +1,9 @@
-#new-upload-form {
-    width: 50%;
+#new-upload-form-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 30%;
     height: 100%;
-    display: block;
     text-align: center;
     margin: 100px auto;
     background-color: #fafafa;
@@ -10,22 +12,34 @@
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
-#new-upload-form label {
+h1 {
+    font-size: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+#new-upload-form-container label {
     font-size: 1.2em;
     font-weight: bold;
     margin-bottom: 10px;
+    color: black;
 }
 
-#new-upload-form input {
+#new-upload-form-container input {
     width: 100%;
-    height: 20px;
+    height: 40px;
     border-radius: 5px;
     border: 1px solid #ccc;
-    padding: 5px;
+    padding: 0 10px;
+    font-size: 1.2em;
+    margin-bottom: 10px;
 }
 
-#new-upload-form button {
-    width: 20%;
+#new-upload-form-container button {
+    width: 50%;
     height: 30px;
     margin: 10px;
     border-radius: 5px;
