--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -51,9 +51,9 @@ li {
   }
 
   #search-bar {
-    height: 30px;
+    height: 40px;
     margin-left: 20px;
-    width: 100%;
+    width: 1500px;
     border: 1px solid black;
     border-radius: 5px;
   }
@@ -62,11 +62,10 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 153, 0, 0.726);
-    border-radius: 5px;
-    border: none;
+    background-color: rgba(255, 255, 255, 0.726);
+    border-left: solid 2px gray;
     text-align: center;
-    height: 40px;
+    height: 50px;
     width: 33%;
     padding: 5px;
     text-decoration: none;
@@ -79,11 +78,11 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 153, 0, 0.726);
-    border-radius: 5px;
-    border: none;
+    background-color: rgba(255, 255, 255, 0.726);
+    border-left: solid 2px gray;
+    border-right: solid 2px gray;
     text-align: center;
-    height: 40px;
+    height: 50px;
     width: 33%;
     padding: 5px;
     text-decoration: none;
@@ -96,11 +95,11 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 153, 0, 0.726);
-    border-radius: 5px;
-    border: none;
+    background-color: rgba(255, 255, 255, 0.726);
+    border-left: solid 2px gray;
+    border-right: solid 2px gray;
     text-align: center;
-    height: 40px;
+    height: 50px;
     width: 5%;
     padding: 5px;
     text-decoration: none;
@@ -113,10 +112,9 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 153, 0, 0.726);
-    border-radius: 5px;
-    border: none;
-    height: 40px;
+    background-color: rgba(255, 255, 255, 0.726);
+    border: solid 2px gray;
+    height: 50px;
     width: 100%;
     padding: 5px;
     color: black;
