--- a/frontend/src/components/NewUploadFormPage/NewUploadForm.css
+++ b/frontend/src/components/NewUploadFormPage/NewUploadForm.css
@@ -1,6 +1,6 @@
 #new-upload-form-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     width: 30%;
     height: 100%;
@@ -21,21 +21,42 @@ h1 {
     padding: 0;
 }
 
-#new-upload-form-container label {
-    font-size: 1.2em;
-    font-weight: bold;
-    margin-bottom: 10px;
+.new-upload-form-elements {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+}
+
+.new-upload-form-page-container-form-title,
+.new-upload-form-page-container-form-album,
+.new-upload-form-page-container-form-url {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.new-upload-form-page-container-errors {
     color: black;
 }
 
+#new-upload-form-container label {
+    font-size: 1.2em;
+    font-weight: bold;
+    color: black;
+    width: 100px;
+}
+
 #new-upload-form-container input {
-    width: 100%;
+    width: 400px;
     height: 40px;
+    margin: 10px 0;
     border-radius: 5px;
     border: 1px solid #ccc;
     padding: 0 10px;
     font-size: 1.2em;
-    margin-bottom: 10px;
+
 }
 
 #new-upload-form-container button {
