--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -3,132 +3,148 @@
 html {
   background-color: black;
   color: white;
+  padding: 0;
 }
 
 li {
     color: black;
   }
 
-  #nav-bar{
-    display: flex;
-    width: 80%;
-    height: 60px;
-    margin: auto;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #aeb2d8;
-  }
+#nav-bar-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 46px;
+  background-color: #333;
+  padding: 0;
+  margin: 0;
+}
 
-  #nav-links{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 15%;
-  }
+#nav-bar{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: 100%;
+}
 
-  #top-logo {
-    height: 100%;
-    width: 100%;
-    margin-right: -10px;
-  }
+#top-logo {
+  height: 100%;
+  width: 100%;
+  margin-right: -10px;
+}
 
-  #title-and-search{
-    display: flex;
-    width: 40%;
-    align-items: center;
-    justify-content: flex-start;
-  }
+#left-nav-links {
+  display: flex;
+  width: 20%;
+  align-items: center;
+  justify-content: flex-start;
+}
 
-  #title {
-    display: flex;
-    text-decoration: none;
-    color: Orange;
-    font-size: 30px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    margin-left: 10px;
+#nav-links{
+  display: flex;
+  width: 20%;
+  align-items: center;
+  justify-content: flex-start;
+}
 
-  }
+#title {
+  width: 10%;
+}
 
-  #search-bar {
-    height: 40px;
-    margin-left: 20px;
-    width: 1500px;
-    border: 1px solid black;
-    border-radius: 5px;
-  }
+#search-bar-container {
+  width: 50%;
+  color: #666;
+  outline: 0;
+  border: 0;
+  padding: 5px 7px;
+  background: #e5e5e5;
+}
+
+#search-bar {
+  width: 100%;
+  height: 100%;
+  border: 0;
+  padding: 0;
+  background: #e5e5e5;
+}
+
 /* //center text in nav-links// */
-  #home-nav-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.726);
-    border-left: solid 2px gray;
-    text-align: center;
-    height: 50px;
-    width: 33%;
-    padding: 5px;
-    text-decoration: none;
-    color: black;
-    font-size: 20px;
-    font-weight: bold;
-  }
+#home-nav-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #333;
+  border-left: solid 1px rgba(0,0,0,.5);
+  border-right: solid 1px rgba(0,0,0,.5);
+  text-align: center;
+  height: 46px;
+  width: 104px;
+  text-decoration: none;
+  color: gray;
+  font-size: 20px;
+  font-weight: bold;
+}
 
-  #discover-nav-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.726);
-    border-left: solid 2px gray;
-    border-right: solid 2px gray;
-    text-align: center;
-    height: 50px;
-    width: 33%;
-    padding: 5px;
-    text-decoration: none;
-    color: black;
-    font-size: 20px;
-    font-weight: bold;
-  }
+#discover-nav-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #333;
+  border-left: solid 1px rgba(0,0,0,.5);
+  border-right: solid 1px rgba(0,0,0,.5);
+  text-align: center;
+  height: 46px;
+  width: 104px;
+  text-decoration: none;
+  color: gray;
+  font-size: 20px;
+  font-weight: bold;
+}
 
-  #new-upload-nav-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.726);
-    border-left: solid 2px gray;
-    border-right: solid 2px gray;
-    text-align: center;
-    height: 50px;
-    width: 5%;
-    padding: 5px;
-    text-decoration: none;
-    color: black;
-    font-size: 20px;
-    font-weight: bold;
-  }
+#new-upload-nav-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #333;
+  border-left: solid 1px rgba(0,0,0,.5);
+  border-right: solid 1px rgba(0,0,0,.5);
+  text-align: center;
+  height: 46px;
+  width: 104px;
+  text-decoration: none;
+  color: gray;
+  font-size: 20px;
+  font-weight: bold;
+}
 
-  #my-profile-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.726);
-    border: solid 2px gray;
-    height: 50px;
-    width: 100%;
-    padding: 5px;
-    color: black;
-    font-weight: bold;
-    text-align: center;
-  }
+#my-profile-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #333;
+  border: solid 1px rgba(0,0,0,.5);
+  height: 100%;
+  width: 100%;
+  padding: 5px;
+  color: gray;
+  font-weight: bold;
+  text-align: center;
+}
 
 #my-profile-button:hover,
-#my-profile-button:focus,
 #new-upload-nav-link:hover,
-#new-upload-nav-link:focus,
 #discover-nav-link:hover,
+#home-nav-link:hover {
+  color: white;
+}
+
+#my-profile-button:focus,
+#new-upload-nav-link:focus,
 #discover-nav-link:focus,
-#home-nav-link:hover,
 #home-nav-link:focus {
   background-color: black;
   color: white;
