--- a/frontend/src/components/SongsPage/SongsPage.css
+++ b/frontend/src/components/SongsPage/SongsPage.css
@@ -6,12 +6,27 @@
   margin: 0 auto;
   width: 80%;
   height: 100%;
-  background-color: black;
+  background-color: #fafafa;
 }
-
-a {
+/* remove bullet points */
+ a {
   justify-content: center;
   width: 50%;
   text-decoration: none;
-  color: white;
+  color: black;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+#all-songs-page-container > h1 {
+  color: black;
 }
