working Delete Button on song page

--- a/frontend/src/components/SongPage/SongPage.css
+++ b/frontend/src/components/SongPage/SongPage.css
@@ -1,3 +1,11 @@
 .song-page {
   color: white;
 }
+
+.song-page__song-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #1a1a1a;
+}
