--- a/frontend/src/components/EditFormModal/EditForm.css
+++ b/frontend/src/components/EditFormModal/EditForm.css
@@ -1,35 +1,34 @@
-#new-upload-form-container {
+#edit-form-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 30%;
+    width: 100%;
     height: 100%;
     text-align: center;
-    margin: 100px auto;
     background-color: #fafafa;
-    padding: 20px;
+
     border-radius: 10px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
-h1 {
+.edit-form-page > h1 {
     font-size: 2em;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0;
-    padding: 0;
+    color: black;
 }
 
-.new-upload-form-elements {
+.edit-form-elements {
     display: flex;
-    width: 100%;
+    width: 500px;
+    height: 500px;
     flex-direction: column;
 }
 
-.new-upload-form-page-container-form-title,
-.new-upload-form-page-container-form-album,
-.new-upload-form-page-container-form-url {
+.edit-form-page-container-form-title,
+.edit-form-page-container-form-album,
+.edit-form-page-container-form-url {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -37,19 +36,19 @@ h1 {
     width: 100%;
 }
 
-.new-upload-form-page-container-errors {
+.edit-form-page-container-errors {
     color: black;
 }
 
-#new-upload-form-container label {
+#edit-form-container label {
     font-size: 1.2em;
     font-weight: bold;
     color: black;
     width: 100px;
 }
 
-#new-upload-form-container input {
-    width: 400px;
+#edit-form-container input {
+    width: 100%;
     height: 40px;
     margin: 10px 0;
     border-radius: 5px;
@@ -59,7 +58,7 @@ h1 {
 
 }
 
-#new-upload-form-container button {
+#edit-form-container button {
     width: 50%;
     height: 30px;
     margin: 10px;
