--- a/frontend/src/components/SongPage/SongPage.css
+++ b/frontend/src/components/SongPage/SongPage.css
@@ -2,10 +2,14 @@
   color: white;
 }
 
+html {
+  background-color: #1a1a1a;
+}
+
 .song-page__song-info {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #1a1a1a;
+  height: 100%;
 }
