--- a/frontend/src/components/SongsPage/SongsPage.css
+++ b/frontend/src/components/SongsPage/SongsPage.css
@@ -4,10 +4,18 @@
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  width: 80%;
-  height: 100%;
-  background-color: #fafafa;
+  width: 100%;
+  min-height: 100%;
+  background-color: #c2c2c2;
 }
+
+#all-songs-page-content {
+  /* position: absolute; */
+  background-color: white;
+  height: 100vh;
+  width: 80%;
+}
+
 /* remove bullet points */
  a {
   justify-content: center;
@@ -23,10 +31,23 @@
 
 ul {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
 }
 
-#all-songs-page-container > h1 {
+#all-songs-page-content ul > li {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  margin: 0 auto;
+  padding: 0;
+  border-bottom: #c2c2c2 solid 1px;
+}
+
+#all-songs-page-content > h1 {
   color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
