--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,3 +3,18 @@ body {
   padding: 0;
   margin: 0;
 }
+
+#audio-player-footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 96px;
+  background-color: #fafafa;
+  border-top: 1px solid #e0e0e0;
+}
+
+#root {
+  height: 100vh;
+  width: 100vw;
+}
