--- a/frontend/src/components/SongPage/SongPage.css
+++ b/frontend/src/components/SongPage/SongPage.css
@@ -13,3 +13,12 @@ html {
   align-items: center;
   height: 100%;
 }
+
+.song-page {
+  display: flex;
+  flex-direction: row;
+  /* align-items: center; */
+  height: 100%;
+  width: 80%;
+  margin: auto;
+}
