--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,22 +1,58 @@
-#log-in-form {
-    width: 250px;
-    height: 250px;
-    background-color: #fff;
+.log-in-form-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: left;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    background-color: #fafafa;
+    padding: 20px;
 }
 
-#log-in-form > label {
+.log-in-form-container > h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-size: 2em;
+}
+
+.log-in-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 100%;
+    height: 100%;
+}
+
+.log-in-form-elements {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+.log-in-form-username,
+.log-in-form-password {
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.log-in-form-username > label,
+.log-in-form-password > label {
+    display: flex;
+    font-size: 1.2em;
+    font-weight: bold;
     color: black;
+    margin-right: 10px;
 }
 
-#log-in-form input{
+.log-in-form-username > input,
+.log-in-form-password > input {
     width: 100%;
     height: 40px;
     border: 1px solid #ccc;
@@ -25,11 +61,13 @@
     margin-bottom: 10px;
 }
 
-#log-in-form button{
-    width: 100%;
-    height: 40px;
-    border: 1px solid #ccc;
+.log-in-form-submit > button {
+    width: 50%;
+    height: 30px;
+    margin: 10px;
     border-radius: 5px;
-    padding: 0 10px;
-    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    padding: 5px;
+    background-color: #f5f5f5;
+    color: #000;
 }
