--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -6,21 +6,14 @@ html {
   padding: 0;
 }
 
-li {
-    color: black;
-  }
-
 #nav-bar-container {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
+  text-align: center;
   width: 100%;
   height: 46px;
   background-color: #333;
-  padding: 0;
-  margin: 0;
-  /* position: absolute; */
 }
 
 #nav-bar{
@@ -32,10 +25,9 @@ li {
   height: 100%;
 }
 
-#top-logo {
-  height: 100%;
+#title {
+  background-color: white;
   width: 100%;
-  margin-right: -10px;
 }
 
 #left-nav-links {
@@ -52,24 +44,31 @@ li {
   justify-content: flex-start;
 }
 
-#title {
-  width: 10%;
-}
-
 #search-bar-container {
-  width: 50%;
-  color: #666;
-  outline: 0;
-  border: 0;
-  padding: 5px 7px;
-  background: #e5e5e5;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 #search-bar {
-  width: 100%;
-  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: 80%;
+  color: #666;
+  outline: 0;
   border: 0;
-  padding: 0;
+  font-size: 1.2em;
+  font-family: 'Lato';
+  font-weight: 300;
+  padding: 0.5em;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
   background: #e5e5e5;
 }
 
@@ -137,9 +136,46 @@ li {
   font-size: 20px;
   font-weight: bold;
   font-family: 'Lato';
+  border-top: none;
+  border-bottom: none;
 }
 
-#my-profile-button {
+.my-profile-button {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  background-color: #333;
+  border-left: solid 1px rgba(0,0,0,.5);
+  border-right: solid 1px rgba(0,0,0,.5);
+  text-align: center;
+  height: 46px;
+  width: 104px;
+  text-decoration: none;
+  color: gray;
+  font-weight: bold;
+  font-family: 'Lato';
+  border-top: none;
+  border-bottom: none;
+  cursor: pointer;
+}
+
+.my-profile-button:hover, .my-profile-button:focus {
+  background-color: #444;
+}
+
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+#right-nav-links {
+  display: flex;
+  flex-flow: row;
+}
+
+.sign-in-button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -151,25 +187,68 @@ li {
   width: 104px;
   text-decoration: none;
   color: gray;
-  /* font-size: 20px; */
-  font-family: 'Lato';
+  font-size: 20px;
   font-weight: bold;
-  /* z-index: 1; */
+  font-family: 'Lato';
+  border-top: none;
+  border-bottom: none;
 }
 
-#my-profile-button:hover,
+#sign-up-nav-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #333;
+  border-left: solid 1px rgba(0,0,0,.5);
+  border-right: solid 1px rgba(0,0,0,.5);
+  text-align: center;
+  height: 46px;
+  width: 104px;
+  text-decoration: none;
+  color: gray;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: 'Lato';
+  border-top: none;
+  border-bottom: none;
+}
+
+
 #upload-nav-link:hover,
 #songs-nav-link:hover,
 #home-nav-link:hover,
-#albums-nav-link:hover {
+#albums-nav-link:hover,
+.sign-in-button:hover,
+.my-profile-button:hover,
+#sign-up-nav-link:hover {
   color: white;
 }
 
-#my-profile-button:focus,
 #upload-nav-link:focus,
 #songs-nav-link:focus,
 #home-nav-link:focus,
-#albums-nav-link:focus {
+#albums-nav-link:focus,
+.sign-in-button:focus,
+#sign-up-nav-link:focus,
+.my-profile-button:focus,
+.my-profile-button:active:focus {
   background-color: black;
   color: white;
+}
+
+.profile-dropdown {
+  position: absolute;
+  text-align: left;
+  background-color: #f1f1f1;
+  min-width: 100%;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  z-index: 1;
+}
+
+.profile-dropdown li {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
 }
