--- a/frontend/src/components/SongsPage/SongsPage.css
+++ b/frontend/src/components/SongsPage/SongsPage.css
@@ -3,9 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
-  width: 100%;
-  min-height: 100%;
+  width: 100vw;
+  min-height: 100vh;
   background-color: #c2c2c2;
 }
 
@@ -16,32 +15,16 @@
   width: 80%;
 }
 
-/* remove bullet points */
- a {
-  justify-content: center;
-  width: 50%;
-  text-decoration: none;
-  color: black;
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin: 0 auto;
-  padding: 0;
-  text-align: center;
-}
-
 ul {
   list-style-type: none;
 }
 
-#all-songs-page-content ul > li {
+#all-songs-page-content > div {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   width: 100%;
-  height: 50px;
-  margin: 0 auto;
-  padding: 0;
+  height: 100%;
   border-bottom: #c2c2c2 solid 1px;
 }
 
@@ -50,4 +33,15 @@ ul {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.track-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.post-username {
+  align-items: center;
+  text-decoration: none;
 }
