--- a/frontend/src/components/UploadFormModal/UploadForm.css
+++ b/frontend/src/components/UploadFormModal/UploadForm.css
@@ -1,64 +1,73 @@
-#new-upload-form-container {
+.new-upload-form-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
-    height: 100%;
     text-align: center;
+    width: 500px;
+    height: 100%;
     background-color: #fafafa;
-
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+    padding: 20px;
 }
 
-.new-upload-form-page > h1 {
-    font-size: 2em;
+.new-upload-form-container > h1 {
     display: flex;
     justify-content: center;
     align-items: center;
     color: black;
+    font-size: 2em;
+}
+
+.new-upload-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
 }
 
 .new-upload-form-elements {
     display: flex;
-    width: 500px;
-    height: 500px;
     flex-direction: column;
+    width: 100%;
+    height: 100%;
 }
 
-.new-upload-form-page-container-form-title,
-.new-upload-form-page-container-form-album,
-.new-upload-form-page-container-form-url {
+.new-upload-form-title,
+.new-upload-form-url {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
     width: 100%;
+    height: 100%;
 }
+
+.new-upload-form-title > label,
+.new-upload-form-url > label {
+    display: flex;
+    font-size: 1.2em;
+    font-weight: bold;
+    color: black;
+    margin-right: 10px;
+}
+
+.new-upload-form-title > input,
+.new-upload-form-url > input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 0 10px;
+    margin-bottom: 10px;
+}
+
 
 .new-upload-form-page-container-errors {
     color: black;
 }
 
-#new-upload-form-container label {
-    font-size: 1.2em;
-    font-weight: bold;
-    color: black;
-    width: 100px;
-}
 
-#new-upload-form-container input {
-    width: 100%;
-    height: 40px;
-    margin: 10px 0;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    padding: 0 10px;
-    font-size: 1.2em;
-
-}
-
-#new-upload-form-container button {
+.new-upload-form-submit > button {
     width: 50%;
     height: 30px;
     margin: 10px;
