--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -248,7 +248,23 @@ html {
 
 .profile-dropdown li {
   color: black;
-  padding: 12px 16px;
+  /* padding: 12px 16px; */
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.profile-dropdown li:hover {
+  background-color: #ddd;
+  cursor: pointer;
+}
+
+.profile-dropdown li button {
+  color: black;
+  height: 100%;
+  width:100%;
   text-decoration: none;
   display: block;
 }
