--- a/frontend/src/components/SongPage/SongPage.css
+++ b/frontend/src/components/SongPage/SongPage.css
@@ -6,19 +6,44 @@ html {
   background-color: #1a1a1a;
 }
 
-.song-page__song-info {
+.song-page {
+  display: flex;
+  /* flex-direction: row; */
+  justify-content: center;
+  align-items: center;
+  /* align-items: center; */
+  height: 100%;
+  width: 80%;
+  margin: auto;
+}
+
+.song-page-comments-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100%;
+  width: 90%;
 }
 
-.song-page {
+.enter-comment-form {
   display: flex;
-  flex-direction: row;
-  /* align-items: center; */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   height: 100%;
-  width: 80%;
-  margin: auto;
+  width: 100%;
+  background-color: white;
+}
+
+.enter-comment-form > input {
+  width: 100%;
+  height: 50px;
+  border: none;
+  border-bottom: 1px solid white;
+  background-color: transparent;
+  color: white;
+  font-size: 20px;
+  font-family: "Roboto", sans-serif;
+  margin-bottom: 10px;
 }
