--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -5,12 +5,17 @@
   margin: 0 auto;
   width: 100%;
   min-height: 100vh;
-  background-color: #c2c2c2;
+  background-color: black;
 }
 
 #home-page-content {
   display: flex;
-  background-color: white;
+  background-image: url("../Images/Home\ page.gif");
+  background-repeat: no-repeat;
+  background-size: fill;
+  background-position: center;
+  width: 100%;
+  height: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -20,12 +25,12 @@
 }
 
  .home-page-body {
-  color: black;
+  color: white;
   margin: 0;
 }
 
  .home-page-title {
-  color: black;
+  color: white;
   font-size: 2.5em;
   font-weight: bold;
   display: flex;
@@ -38,10 +43,13 @@ footer {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 80vw;
-  /* position: absolute; */
-  bottom: 96px;
-  background-color: gray;
+  width: 100%;
+  bottom: 0;
+  /* position: fixed; */
+  color: white;
+  font-size: 1.5em;
+  font-weight: bold;
+  background-color: #333;
   color: white;
 }
 
