--- a/frontend/src/components/SongsPage/SongsPage.css
+++ b/frontend/src/components/SongsPage/SongsPage.css
@@ -5,11 +5,11 @@
   align-items: center;
   width: 100vw;
   height: 100vh;
-  background-color: #c2c2c2;
+  background-color: black;
 }
 
 .all-songs-page-container > h1 {
-  color: black;
+  color: #c2c2c2;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   justify-content: top;
-  background-color: white;
+  background-color: #c2c2c2;
   height: 100%;
   width: 80%;
 }
