--- a/frontend/src/components/UploadFormModal/UploadForm.css
+++ b/frontend/src/components/UploadFormModal/UploadForm.css
@@ -66,9 +66,17 @@
     color: black;
 }
 
+.new-upload-form-submit {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
 
 .new-upload-form-submit > button {
-    width: 50%;
+    width: 100px;
     height: 30px;
     margin: 10px;
     border-radius: 5px;
