--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -53,12 +53,14 @@
 
 .log-in-form-username > input,
 .log-in-form-password > input {
-    width: 100%;
-    height: 40px;
-    border: 1px solid #ccc;
+    width: 100px;
+    height: 30px;
+    margin: 10px;
     border-radius: 5px;
-    padding: 0 10px;
-    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    padding: 5px;
+    background-color: #f5f5f5;
+    color: #000;
 }
 
 .log-in-form-submit > button {
