--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -237,20 +237,24 @@ html {
 }
 
 .profile-dropdown {
+  text-decoration: none;
   position: absolute;
   text-align: left;
   background-color: #f1f1f1;
   min-width: 100%;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   border-radius: 5px;
+  padding: 0;
+  list-style-type: none;
   z-index: 1;
 }
 
 .profile-dropdown li {
+  margin: 0px;
   color: black;
   /* padding: 12px 16px; */
-  height: 100%;
-  width: 100%;
+  height: 50px;
+  min-width: 200px;
   text-decoration: none;
   display: block;
   text-align: left;
