--- a/frontend/src/components/SignupFormPage/SignupForm.css
+++ b/frontend/src/components/SignupFormPage/SignupForm.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center; */
-    width: 50%;
+    width: 500px;
     height: 100%;
     display: block;
     text-align: center;
@@ -30,7 +30,7 @@
 }
 
 #sign-up-form button {
-    width: 20%;
+    width: 100px;
     height: 30px;
     margin: 10px;
     border-radius: 5px;
