--- a/frontend/src/components/EditCommentModal/EditComment.css
+++ b/frontend/src/components/EditCommentModal/EditComment.css
@@ -1,33 +1,50 @@
-
 .edit-comment-page {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  text-align: center;
+  width: 100%;
+  height: 100%;
   background-color: #fafafa;
-  width: 150%;
-  height: 150%;
-  padding: 0;
-  margin: 0;
+  padding: 20px;
+}
+.edit-comment-page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
 .edit-comment-page > h1 {
   color: black;
 }
 
+.edit-comment-page-container-input {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
 .edit-comment-page-container-input input {
-  min-width: 300px;
-  min-height: 150px;
-  max-width: 300px;
-  max-height: 150px;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 0 10px;
+  margin-bottom: 10px;
 }
 
 #edit-comment-page-contaier-form-submit > button {
-  width: 100px;
+  width: 50%;
   height: 30px;
-  background-color: #fafafa;
-  border: none;
+  margin: 10px;
   border-radius: 5px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  padding: 5px;
+  background-color: #f5f5f5;
+  color: #000;
 }
