--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -43,12 +43,15 @@ footer {
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 5vh;
   bottom: 0;
   /* position: fixed; */
   color: white;
-  font-size: 1.5em;
+  background-color: black;
+  font-size: 1.2em;
   font-weight: bold;
-  background-color: #333;
+  /* background-col
+  or: #333; */
   color: white;
 }
 
