--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -71,3 +71,14 @@
     background-color: #f5f5f5;
     color: #000;
 }
+
+.log-in-form > ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    color: black;
+    list-style-type: none;
+}
