--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,5 +1,3 @@
-/* remove default html styling */
-
 html {
   background-color: black;
   color: white;
@@ -26,9 +24,19 @@ html {
 }
 
 #title {
-  background-color: white;
+  background-color: #666;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   width: 100%;
+  height: 100%;
 }
+
+#title:hover {
+  background-color: white;
+}
+
 
 #left-nav-links {
   display: flex;
@@ -222,6 +230,7 @@ html {
 .my-profile-button:hover,
 #sign-up-nav-link:hover {
   color: white;
+  cursor: pointer;
 }
 
 #upload-nav-link:focus,
@@ -237,25 +246,32 @@ html {
 }
 
 .profile-dropdown {
+  text-decoration: none;
   position: absolute;
   text-align: left;
   background-color: #f1f1f1;
   min-width: 100%;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  border-radius: 5px;
+  /* border-radius: 10px; */
+  padding: 0;
+  list-style-type: none;
   z-index: 1;
 }
 
 .profile-dropdown li {
+  margin: 0px;
   color: black;
   /* padding: 12px 16px; */
-  height: 100%;
-  width: 100%;
+  height: 50px;
+  min-width: 200px;
   text-decoration: none;
   display: block;
   text-align: left;
+  width: 100px;
+  text-align:center;
 }
 
+.profile-dropdown li button:hover,
 .profile-dropdown li:hover {
   background-color: #ddd;
   cursor: pointer;
@@ -267,4 +283,5 @@ html {
   width:100%;
   text-decoration: none;
   display: block;
+  border: none;
 }
