--- a/frontend/src/components/UploadFormModal/UploadForm.css
+++ b/frontend/src/components/UploadFormModal/UploadForm.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    width: 500px;
-    height: 100%;
+    width: 550px;
+    height: 300px;
     background-color: #fafafa;
     padding: 20px;
 }
