--- a/frontend/src/components/EditCommentModal/EditComment.css
+++ b/frontend/src/components/EditCommentModal/EditComment.css
@@ -21,6 +21,15 @@
   color: black;
 }
 
+.edit-comment-elements {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+
 .edit-comment-page-container-input {
   display: flex;
   flex-direction: column;
@@ -29,13 +38,17 @@
   width: 100%;
   height: 100%;
 }
-.edit-comment-page-container-input input {
+.edit-comment-page-container-input > textarea {
   width: 100%;
   height: 100%;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 0 10px;
-  margin-bottom: 10px;
+  resize: none;
+  border: none;
+  border-bottom: 1px solid black;
+  padding: 10px;
+  font-size: 20px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  color: black;
 }
 
 #edit-comment-page-contaier-form-submit > button {
